# agentic-ai-workflows

./: pyproject.toml
lesson_2_chatbot_basics/: lesson_2_notebook.ipynb
lesson_3_rag_web_access/: lesson_3_notebook.ipynb
lesson_4_text_to_sql/: lesson_4_notebook.ipynb
lesson_5_document_rag/: lesson_5_notebook.ipynb
