[project]
name = "agentic-ai-workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.40.0",
    "faker>=37.4.0",
    "fastapi>=0.116.0",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "llama-index>=0.12.48",
    "llama-index-embeddings-azure-openai>=0.3.9",
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "openai>=1.93.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "uuid>=1.30",
    "uvicorn>=0.35.0",
    "xlrd>=2.0.2",
]
